src/objects/QuickLink__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IconGroup__c</fullName>
        <inlineHelpText>The Lightning Design System icon group.
https://www.lightningdesignsystem.com/icons/
Standard is used if not set.</inlineHelpText>
        <label>Icon Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>standard</fullName>
                </value>
                <value>
                    <fullName>custom</fullName>
                </value>
                <value>
                    <fullName>action</fullName>
                </value>
                <value>
                    <fullName>doctype</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IconName__c</fullName>
        <label>Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission__c</fullName>
        <label>Permission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredSortIndex__c</fullName>
        <label>Preferred Sort Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Please note that the Visualforce page can include URL Parameters.</description>
        <inlineHelpText>Whether the target is a Record Id, Visualforce page, URL, etc.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visualforce</fullName>
                </value>
                <value>
                    <fullName>Record</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quick Link</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quick Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quick Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>